--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true,
         "node": true,
         "browser": false,
-        "jest": true,
+        "jest": true
     },
     "extends": ["eslint:recommended", "plugin:prettier/recommended"],
     "parserOptions": {
