--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "prettier": "2.6.2"
   },
   "dependencies": {
+    "@strapi/plugin-graphql": "^4.1.12",
     "@strapi/plugin-i18n": "4.1.12",
     "@strapi/plugin-users-permissions": "4.1.12",
     "@strapi/strapi": "4.1.12",
+    "axios": "^0.27.2",
     "pg": "8.6.0"
   },
   "author": {
